--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="./images/dumbbell-35686.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <meta name="description" content="PWA workout React Application" />
+    <link rel="apple-touch-icon" href="./images/dumbbell-35686.png" />
+    <link rel="manifest" href="manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet" />
 
     <title>Felicias träningsapp</title>
   </head>
@@ -20,16 +18,15 @@
     <div id="root"></div>
     <script>
       // kollar om service worker funkar
-      if('serviceWorker' in navigator){
+      if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
           //register returnerar ett promise
-          navigator.serviceWorker.register('/serviceworker.js')
-          .then((reg) => console.log('success', reg.scope)) // tillåter oss att skapa egen service worker fil
-          .catch((error) => console.error('error', error));
-        })
-
+          navigator.serviceWorker
+            .register('/serviceworker.js')
+            .then((reg) => console.log('success', reg.scope)) // tillåter oss att skapa egen service worker fil
+            .catch((error) => console.error('error', error));
+        });
       }
-      </script>
-
+    </script>
   </body>
 </html>
